--- a/package.json
+++ b/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "babel-preset-next": "^1.4.0",
+    "mongoose": "^8.7.0",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "stripe": "^17.2.0",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
+    "@types/node": "22.7.5",
+    "@types/react": "18.3.11",
     "eslint": "^8",
-    "eslint-config-next": "14.2.5"
+    "eslint-config-next": "14.2.5",
+    "typescript": "5.6.3"
   }
 }
