--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stripe": "stripe"
   },
   "dependencies": {
     "axios": "^1.7.7",
     "babel-preset-next": "^1.4.0",
+    "micro": "^10.0.1",
     "mongoose": "^8.7.0",
     "next": "^14.2.14",
     "react": "^18",
