--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "stripe": "stripe"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "babel-preset-next": "^1.4.0",
+    "framer-motion": "^11.11.9",
     "micro": "^10.0.1",
     "mongoose": "^8.7.0",
     "next": "^14.2.14",
+    "nprogress": "^0.2.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^3.1.0",
     "stripe": "^17.2.0",
     "styled-components": "^6.1.13"
   },
